# ani2nerdle

./: Cargo.toml  README.md
fe/: index.html  index.js
src/: main.rs
