[package]
name = "ani2nerdle"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
rmpv = { version = "1.3.0", features = ["with-serde"] }
socketioxide = "0.15.1"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
futures = "0.3.27"
http = "1.1.0"
nanoid = "0.4.0"

[[bin]]
name = "ani2nerdle"
path = "src/main.rs"
